--- a/index.html
+++ b/index.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Marauders Interactive Maps</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="node_modules/ol/ol.css" />
-    <style>
-      html,
-      body {
-        margin: 0;
-        height: 100%;
-      }
-      .map {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="map" class="map"></div>
-    <!-- Popup -->
-    <div id="popup"></div>
-    <!-- Pointer events polyfill for old browsers, see https://caniuse.com/#feat=pointer -->
-    <script src="https://cdn.jsdelivr.net/npm/elm-pep@1.0.6/dist/elm-pep.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <script type="module" src="main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Marauders Interactive Maps</title>
+  <link rel="stylesheet" href="assets/dist/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/dist/ol/css/ol.css">
+  <style>
+    html,
+    body {
+      margin: 0;
+      height: 100%;
+    }
+
+    .map {
+      width: 100%;
+      height: 100%;
+    }
+
+    .card {
+      border: 0;
+      width: 350px;
+      height: 350px;
+    }
+
+    .popover-body {
+      padding: 0
+    }
+
+    .popup-name {
+      margin-bottom: 0;
+      padding: 10px !important;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="map" class="map"></div>
+  <div id="popup" class="popup"></div>
+  <script src="assets/dist/elm-pep/js/elm-pep.js"></script>
+  <script src="assets/dist/popper/js/popper.min.js"></script>
+  <script src="assets/dist/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/dist/ol/js/ol.js"></script>
+  <script type="module" src="main.js"></script>
+</body>
+
 </html>
