Starting code modulation

--- a/index.html
+++ b/index.html
@@ -6,19 +6,8 @@
   </head>
 
   <body>
-    <div id="map" class="map"></div>
-    <div id="popup-name" class="popup-name"></div>
-    <div id="popup-info" class="popup-info"></div>
-    <div id="modal-img" class="modal modal-img">
-      <span
-        id="modal-img-close"
-        class="modal-img-close close"
-        data-dismiss="modal"
-        role="button"
-        >&times;</span
-      >
-      <img class="modal-content modal-img-fs img-fluid" id="modal-img-fs" />
-    </div>
-    <script type="module" src="main.js"></script>
+    <script type="module">
+      window.location.href = "en/index.html";
+    </script>
   </body>
 </html>
