--- a/en/index.html
+++ b/en/index.html
@@ -7,6 +7,8 @@
 
   <body>
     <div id="map" class="map"></div>
+    <button id="tag-selector-btn" class="tag-selector-btn btn rounded p-3"><img class='logo' src='../data/icons/tags.svg' width='26' height='26'></button>
+    <div id="tag-selector" class="tag-selector rounded"></div>
     <div id="popup-name" class="popup-name"></div>
     <div id="popup-info" class="popup-info"></div>
     <div id="modal-img" class="modal modal-img">
@@ -22,7 +24,7 @@
     <div id="lang-div" class="dropdown lang-div rounded">
       <div class="btn-group dropdown-center dropdown p-1">
         <button
-          class="btn pt-0"
+          class="btn pt-0 lang-btn"
           type="button"
           data-bs-toggle="dropdown"
           aria-expanded="false"
@@ -37,7 +39,7 @@
       </div>
     </div>
     <script>
-          localStorage.setItem('lang', 'en');
+      localStorage.setItem("lang", "en");
     </script>
     <script type="module" src="../js/lang.js"></script>
     <script type="module" src="../js/spaceport.js"></script>
