--- a/es/index.html
+++ b/es/index.html
@@ -27,6 +27,28 @@
           </div>
         </div>
       </div>
+      <div id="back-div">
+        <button id="back-btn" onclick="window.location.href='./index.html'" class="back-btn btn rounded p-3">
+          <img
+            class="logo"
+            src="../data/icons/back.svg"
+            width="26"
+            height="26"
+          />
+        </button>
+      </div>
+    </div>
+    <div id="attributions-div" class="rounded">
+      <button id="attributions-btn" class="btn rounded p-3">
+        <img
+          class="logo"
+          src="../data/icons/info.svg"
+          width="26"
+          height="26"
+        />
+      </button>
+      <div id="attributions-info" class="rounded p-3">
+      </div>
     </div>
     <div id="map" class="map"></div>
     <div id="popup-name" class="popup-name"></div>
