Modified language icon

--- a/en/index.html
+++ b/en/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Marauders Mapas Interactivos</title>
+    <title>Marauders Interactive Maps</title>
   </head>
 
   <body>
@@ -19,18 +19,18 @@
         <div id="tag-selector" class="tag-selector rounded"></div>
       </div>
       <div id="lang-div" class="dropdown lang-div rounded">
-        <div class="btn-group dropdown-center dropdown p-1">
+        <div class="btn-group dropdown-center dropdown">
           <button
-            class="btn pt-0 lang-btn"
+            class="btn lang-btn rounded"
             type="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            <img src="../data/lang/us.svg" width="24" height="18" />
+            <img src="../data/icons/language.svg" width="30" height="24" />
           </button>
           <div class="dropdown-menu dropdown-menu-wide">
             <button
-              class="dropdown-item pt-0"
+              class="dropdown-item rounded"
               href="#"
               id="change-language-btn"
             >
