--- a/es/index.html
+++ b/es/index.html
@@ -7,28 +7,44 @@
 
   <body>
     <div id="hud">
-      <button id="tag-selector-btn" class="tag-selector-btn btn rounded p-3">
-        <img class="logo" src="../data/icons/tags.svg" width="26" height="26" />
-      </button>
-      <div id="tag-selector" class="tag-selector rounded"></div>
+      <div id="tag-selector-div">
+        <button id="tag-selector-btn" class="tag-selector-btn btn rounded p-3">
+          <img
+            class="logo"
+            src="../data/icons/tags.svg"
+            width="26"
+            height="26"
+          />
+        </button>
+        <div id="tag-selector" class="tag-selector rounded"></div>
+      </div>
       <div id="lang-div" class="dropdown lang-div rounded">
-        <div class="btn-group dropdown-center dropdown p-1">
+        <div class="btn-group dropdown-center dropdown">
           <button
-            class="btn pt-0 lang-btn"
+            class="btn lang-btn rounded"
             type="button"
             data-bs-toggle="dropdown"
-            aria-expanded="false">
-            <img src="../data/lang/es.svg" width="24" height="18" />
+            aria-expanded="false"
+          >
+            <img src="../data/icons/language.svg" width="30" height="24" />
           </button>
           <div class="dropdown-menu dropdown-menu-wide">
-            <button class="dropdown-item pt-0" href="#" id="change-language-btn">
+            <button
+              class="dropdown-item rounded"
+              href="#"
+              id="change-language-btn"
+            >
               <img src="../data/lang/us.svg" width="24" height="18" />
             </button>
           </div>
         </div>
       </div>
       <div id="back-div">
-        <button id="back-btn" onclick="window.location.href='./index.html'" class="back-btn btn rounded p-3">
+        <button
+          id="back-btn"
+          onclick="window.location.href='./index.html'"
+          class="back-btn btn rounded p-3"
+        >
           <img
             class="logo"
             src="../data/icons/back.svg"
@@ -37,17 +53,17 @@
           />
         </button>
       </div>
-    </div>
-    <div id="attributions-div" class="rounded">
-      <button id="attributions-btn" class="btn rounded p-3">
-        <img
-          class="logo"
-          src="../data/icons/info.svg"
-          width="26"
-          height="26"
-        />
-      </button>
-      <div id="attributions-info" class="rounded p-3">
+      <div id="attributions-div" class="rounded">
+        <button id="attributions-btn" class="btn rounded p-3">
+          <img
+            class="logo"
+            src="../data/icons/info.svg"
+            width="26"
+            height="26"
+          />
+        </button>
+        <div id="attributions-info" class="rounded p-3">
+        </div>
       </div>
     </div>
     <div id="map" class="map"></div>
