--- a/maps/space-port.html
+++ b/maps/space-port.html
@@ -41,7 +41,7 @@
       <div id="back-div">
         <button
           id="back-btn"
-          onclick="window.location.href='./index.html'"
+          onclick="window.location.href='./../index.html'"
           class="back-btn btn rounded p-3"
         >
           <img
@@ -79,6 +79,6 @@
       <img class="modal-content modal-img-fs img-fluid" id="modal-img-fs" />
     </div>
     <script type="module" src="../js/lang.js"></script>
-    <script type="module" src="../js/maps/spaceport.js"></script>
+    <script type="module" src="../js/maps/space-port.js"></script>
   </body>
 </html>
