Added project logo, wiki logo and fixed vite config

--- a/es/attributions.html
+++ b/es/attributions.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column">
-  <div class="flex-fill align-bottom text-center">
+  <div class="flex-fill align-bottom text-start">
     Creado con ❤️ por
     <a href="https://twitch.tv/longopy" target="_blank"
       ><img
@@ -11,7 +11,7 @@
       longopy</a
     >
   </div>
-  <div class="flex-fill align-bottom text-center">
+  <div class="flex-fill align-bottom text-start">
     <a href="https://discord.com/invite/BArdNFGhEc" target="_blank"
       ><img
         class="logo"
@@ -22,7 +22,7 @@
       Comunidad Hispana Marauders</a
     >
   </div>
-  <div class="flex-fill align-bottom text-center">
+  <div class="flex-fill align-bottom text-start">
     <a href="https://discord.gg/marauders" target="_blank"
       ><img
         class="logo"
@@ -31,6 +31,17 @@
         height="22"
       />
       Discord Oficial Marauders</a
+    >
+  </div>
+  <div class="flex-fill align-bottom text-start">
+    <a href="https://marauders.fandom.com/wiki/Marauders_Wiki" target="_blank"
+      ><img
+        class="logo"
+        src="../data/logos/wiki_logo.svg"
+        width="22"
+        height="22"
+      />
+      Marauders Wiki</a
     >
   </div>
 </div>
