--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <title>Maprauders</title>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
       </div>
     </div>
   </div>
-  <div class="h1 text-center mt-5">MARAUDERS INTERACTIVE MAPS</div>
+  <img class=" mx-auto d-block mt-5" src="./data/logos/maprauders.svg" alt="MAPRAUDERS" height="72"></img>
   <div class="p-5">
     <div class="container">
       <div id="menu-div" class="row">
@@ -35,7 +36,7 @@
     </div>
   </div>
   <script type="module" src="./js/lang.js"></script>
-  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </body>
 
 </html>
