--- a/maps/space-port.html
+++ b/maps/space-port.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <title>Maprauders</title>
   </head>
 
   <body>
@@ -63,6 +64,13 @@
         </button>
         <div id="attributions-info" class="rounded p-3">
         </div>
+      </div>
+      <div id="map-logo">
+        <img
+          src="../data/logos/maprauders.svg"
+          alt="MAPRAUDERS"
+          height="45"
+        />
       </div>
     </div>
     <div id="map" class="map"></div>
