--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
       </div>
     </div>
   </div>
-  <img class=" mx-auto d-block mt-5" src="./data/logos/maprauders.svg" alt="MAPRAUDERS" height="72"></img>
-  <div class="p-5">
-    <div class="container">
-      <div id="menu-div" class="row">
+  <div class="pt-5">
+    <img class=" mx-auto d-block" src="./data/logos/maprauders.svg" alt="MAPRAUDERS" height="72"></img>
+    <div class="p-5">
+      <div class="container">
+        <div id="menu-div" class="row">
+        </div>
       </div>
     </div>
   </div>
