Added new tags and modified tags interface

--- a/maps/space-port.html
+++ b/maps/space-port.html
@@ -16,7 +16,9 @@
             height="26"
           />
         </button>
-        <div id="tag-selector" class="tag-selector rounded"></div>
+        <div id="tag-selector" class="tag-selector rounded">
+          <div id="tag-selector-content" class="row d-inline-flex"></div>
+        </div>
       </div>
       <div id="lang-div" class="dropdown lang-div rounded">
         <div class="btn-group dropdown-center dropend">
