Fixed web structure and tag-selector logic

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </div>
     </div>
   </div>
-  <div class="pt-5">
+  <div class="mt-5">
     <img class=" mx-auto d-block" src="./data/logos/maprauders.svg" alt="MAPRAUDERS" height="72"></img>
     <div class="p-5">
-      <div class="container">
+      <div class="container mt-5">
         <div id="menu-div" class="row">
         </div>
       </div>
