--- a/maps/asteroid-mine.html
+++ b/maps/asteroid-mine.html
@@ -17,7 +17,7 @@
           />
         </button>
         <div id="tag-selector" class="tag-selector rounded">
-          <div id="tag-selector-content" class="row d-inline-flex"></div>
+          <div id="tag-selector-content" class="row d-inline-flex pt-3"></div>
         </div>
       </div>
       <div id="lang-div" class="dropdown lang-div rounded">
