--- a/es/attributions.html
+++ b/es/attributions.html
@@ -1,47 +1,27 @@
 <div class="d-flex flex-column">
   <div class="flex-fill align-bottom text-start">
     Creado con ❤️ por
-    <a href="https://twitch.tv/longopy" target="_blank"
-      ><img
-        class="logo"
-        src="../data/logos/longopy_logo.svg"
-        width="25"
-        height="24"
-      />
-      longopy</a
-    >
+    <a href="https://twitch.tv/longopy" target="_blank"><img class="logo" src="../data/logos/longopy_logo.svg"
+        width="25" height="24" />
+      longopy</a>
   </div>
   <div class="flex-fill align-bottom text-start">
-    <a href="https://discord.com/invite/BArdNFGhEc" target="_blank"
-      ><img
-        class="logo"
-        src="../data/logos/discord.svg"
-        width="22"
-        height="22"
-      />
-      Comunidad Hispana Marauders</a
-    >
+    Mapas creados por
+    <a href="https://discord.com/channels/695304399303606395/1096627227505991690" target="_blank">Ahtu</a>
   </div>
   <div class="flex-fill align-bottom text-start">
-    <a href="https://discord.gg/marauders" target="_blank"
-      ><img
-        class="logo"
-        src="../data/logos/discord.svg"
-        width="22"
-        height="22"
-      />
-      Discord Oficial Marauders</a
-    >
+    <a href="https://discord.com/invite/BArdNFGhEc" target="_blank"><img class="logo" src="../data/logos/discord.svg"
+        width="22" height="22" />
+      Comunidad Hispana Marauders</a>
   </div>
   <div class="flex-fill align-bottom text-start">
-    <a href="https://marauders.fandom.com/wiki/Marauders_Wiki" target="_blank"
-      ><img
-        class="logo"
-        src="../data/logos/wiki_logo.svg"
-        width="22"
-        height="22"
-      />
-      Marauders Wiki</a
-    >
+    <a href="https://discord.gg/marauders" target="_blank"><img class="logo" src="../data/logos/discord.svg" width="22"
+        height="22" />
+      Discord Oficial Marauders</a>
+  </div>
+  <div class="flex-fill align-bottom text-start">
+    <a href="https://marauders.fandom.com/wiki/Marauders_Wiki" target="_blank"><img class="logo"
+        src="../data/logos/wiki_logo.svg" width="22" height="22" />
+      Marauders Wiki</a>
   </div>
 </div>
