--- a/es/attributions.html
+++ b/es/attributions.html
@@ -24,4 +24,8 @@
         src="../data/logos/wiki_logo.svg" width="22" height="22" />
       Marauders Wiki</a>
   </div>
+  <div class="flex-fill align-bottom text-start">
+    <a href="https://forms.gle/mtrhGEjG8WqoYnas5" target="_blank">
+        Sugerencias y reporte de errores</a>
+  </div>
 </div>
