--- a/en/attributions.html
+++ b/en/attributions.html
@@ -24,4 +24,8 @@
         src="../data/logos/wiki_logo.svg" width="22" height="22" />
       Marauders Wiki</a>
   </div>
+  <div class="flex-fill align-bottom text-start">
+    <a href="https://forms.gle/qT1Y4bkVC9PfukKp7" target="_blank">
+      Suggestions and bug reports</a>
+  </div>
 </div>
