Added penal colony map

--- a/en/attributions.html
+++ b/en/attributions.html
@@ -7,7 +7,8 @@
   </div>
   <div class="flex-fill align-bottom text-start">
     Maps created by
-    <a href="https://discord.com/channels/695304399303606395/1096627227505991690" target="_blank">Ahtu</a>
+    <img class="logo" src="../data/logos/discord.svg"
+        width="22" height="22" /> <b>Ahtu#7482</b>
   </div>
   <div class="flex-fill align-bottom text-start">
     <a href="https://discord.com/invite/BArdNFGhEc" target="_blank"><img class="logo" src="../data/logos/discord.svg"
