--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
     </div>
   </div>
-  <div class="mt-5">
+  <div class="header">
     <img class=" mx-auto d-block" src="./data/logos/maprauders.svg" alt="MAPRAUDERS" height="72"></img>
     <div class="p-5">
       <div class="container mt-5">
