--- a/maps/penal-colony.html
+++ b/maps/penal-colony.html
@@ -71,7 +71,7 @@
         <img
           src="../data/logos/maprauders.svg"
           alt="MAPRAUDERS"
-          height="45"
+          height="46"
         />
       </div>
     </div>
@@ -89,6 +89,6 @@
       <img class="modal-content modal-img-fs img-fluid" id="modal-img-fs" />
     </div>
     <script type="module" src="../js/lang.js"></script>
-    <script type="module" src="../js/maps/asteroid-mine.js"></script>
+    <script type="module" src="../js/maps/penal-colony.js"></script>
   </body>
 </html>
