--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Maprauders</title>
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 
 <body>
