Modified dynamic imports to include BASE_URL

--- a/index.html
+++ b/index.html
@@ -22,12 +22,7 @@
     </div>
     <div id="attributions-div" class="rounded">
       <button id="attributions-btn" class="btn rounded p-3">
-        <img
-          class="logo"
-          src="./data/icons/info.svg"
-          width="26"
-          height="26"
-        />
+        <img class="icon-hover" src="./data/icons/info.svg" width="26" height="26" />
       </button>
       <div id="attributions-info" class="rounded p-3">
       </div>
