Moved penal colony labels and points, and removed flags from lang

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </button>
         <div class="dropdown-menu dropdown-menu-wide p-1">
           <button class="dropdown-item rounded" href="#" id="change-language-btn">
-            <img id="lang-btn" width="24" height="18" />
+            <span id="lang-btn" class="text-light"></span>
           </button>
         </div>
       </div>
