--- a/maps/penal-colony.html
+++ b/maps/penal-colony.html
@@ -1,95 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Maprauders</title>
-  </head>
 
-  <body>
-    <div id="hud">
-      <div id="tag-selector-div">
-        <button id="tag-selector-btn" class="tag-selector-btn btn rounded p-3">
-          <img
-            class="logo"
-            src="../data/icons/tags.svg"
-            width="26"
-            height="26"
-          />
-        </button>
-        <div id="tag-selector" class="tag-selector rounded">
-          <div id="tag-selector-content" class="row d-inline-flex pt-3"></div>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>Maprauders</title>
+</head>
+
+<body>
+  <div id="hud">
+    <div id="tag-selector-div">
+      <button id="tag-selector-btn" class="tag-selector-btn btn rounded p-3">
+        <img class="logo" src="../data/icons/tags.svg" width="26" height="26" />
+      </button>
+      <div id="tag-selector" class="tag-selector rounded">
+        <div id="tag-selector-content" class="row d-inline-flex pt-3"></div>
       </div>
-      <div id="lang-div" class="dropdown lang-div rounded">
-        <div class="btn-group dropdown-center dropend">
-          <button
-            class="btn lang-btn rounded"
-            type="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <img src="../data/icons/language.svg" width="30" height="24" />
+    </div>
+    <div id="lang-div" class="dropdown lang-div rounded">
+      <div class="btn-group dropdown-center dropend">
+        <button class="btn lang-btn rounded" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="../data/icons/language.svg" width="30" height="24" />
+        </button>
+        <div class="dropdown-menu dropdown-menu-wide p-1">
+          <button class="dropdown-item rounded" href="#" id="change-language-btn">
+            <span id="lang-btn" class="text-light"></span>
           </button>
-          <div class="dropdown-menu dropdown-menu-wide p-1">
-            <button
-              class="dropdown-item rounded"
-              href="#"
-              id="change-language-btn"
-            >
-              <img id="lang-btn" width="24" height="18" />
-            </button>
-          </div>
         </div>
       </div>
-      <div id="back-div">
-        <button
-          id="back-btn"
-          onclick="window.location.href='./../index.html'"
-          class="back-btn btn rounded p-3"
-        >
-          <img
-            class="logo"
-            src="../data/icons/back.svg"
-            width="26"
-            height="26"
-          />
-        </button>
-      </div>
-      <div id="attributions-div" class="rounded">
-        <button id="attributions-btn" class="btn rounded p-3">
-          <img
-            class="logo"
-            src="../data/icons/info.svg"
-            width="26"
-            height="26"
-          />
-        </button>
-        <div id="attributions-info" class="rounded p-3">
-        </div>
-      </div>
-      <div id="map-logo">
-        <img
-          src="../data/logos/maprauders.svg"
-          alt="MAPRAUDERS"
-          height="46"
-        />
+    </div>
+    <div id="back-div">
+      <button id="back-btn" onclick="window.location.href='./../index.html'" class="back-btn btn rounded p-3">
+        <img class="logo" src="../data/icons/back.svg" width="26" height="26" />
+      </button>
+    </div>
+    <div id="attributions-div" class="rounded">
+      <button id="attributions-btn" class="btn rounded p-3">
+        <img class="logo" src="../data/icons/info.svg" width="26" height="26" />
+      </button>
+      <div id="attributions-info" class="rounded p-3">
       </div>
     </div>
-    <div id="map" class="map"></div>
-    <div id="popup-name" class="popup-name"></div>
-    <div id="popup-info" class="popup-info"></div>
-    <div id="modal-img" class="modal modal-img">
-      <span
-        id="modal-img-close"
-        class="modal-img-close close"
-        data-dismiss="modal"
-        role="button"
-        >&times;</span
-      >
-      <img class="modal-content modal-img-fs img-fluid" id="modal-img-fs" />
+    <div id="map-logo">
+      <img src="../data/logos/maprauders.svg" alt="MAPRAUDERS" height="46" />
     </div>
-    <script type="module" src="../js/lang.js"></script>
-    <script type="module" src="../js/maps/penal-colony.js"></script>
-  </body>
+  </div>
+  <div id="map" class="map"></div>
+  <div id="popup-name" class="popup-name"></div>
+  <div id="popup-info" class="popup-info"></div>
+  <div id="modal-img" class="modal modal-img">
+    <span id="modal-img-close" class="modal-img-close close" data-dismiss="modal" role="button">&times;</span>
+    <img class="modal-content modal-img-fs img-fluid" id="modal-img-fs" />
+  </div>
+  <script type="module" src="../js/lang.js"></script>
+  <script type="module" src="../js/maps/penal-colony.js"></script>
+</body>
+
 </html>
