Added penal colony pictures for some points and improved ui filter interface

--- a/en/attributions.html
+++ b/en/attributions.html
@@ -6,9 +6,12 @@
       longopy</a>
   </div>
   <div class="flex-fill align-bottom text-start">
+    Thanks to the help of
+    <img class="logo" src="../data/logos/discord.svg" width="22" height="22" /> Flaminganus#5501
+  </div>
+  <div class="flex-fill align-bottom text-start">
     Maps created by
-    <img class="logo" src="../data/logos/discord.svg"
-        width="22" height="22" /> <b>Ahtu#7482</b>
+    <img class="logo" src="../data/logos/discord.svg" width="22" height="22" /> Ahtu#7482
   </div>
   <div class="flex-fill align-bottom text-start">
     <a href="https://discord.com/invite/BArdNFGhEc" target="_blank"><img class="logo" src="../data/logos/discord.svg"
