--- a/es/attributions.html
+++ b/es/attributions.html
@@ -6,6 +6,10 @@
       longopy</a>
   </div>
   <div class="flex-fill align-bottom text-start">
+    Gracias a la ayuda de
+    <img class="logo" src="../data/logos/discord.svg" width="22" height="22" /> Flaminganus#5501
+  </div>
+  <div class="flex-fill align-bottom text-start">
     Mapas creados por
     <img class="logo" src="../data/logos/discord.svg"
         width="22" height="22" /> <b>Ahtu#7482</b>
