--- a/maps/penal-colony.html
+++ b/maps/penal-colony.html
@@ -14,7 +14,8 @@
         <img class="logo" src="../data/icons/tags.svg" width="26" height="26" />
       </button>
       <div id="tag-selector" class="tag-selector rounded">
-        <div id="tag-selector-content" class="row d-inline-flex pt-3"></div>
+        <div id="tag-selector-content" class="row p-3">
+        </div>
       </div>
     </div>
     <div id="lang-div" class="dropdown lang-div rounded">
