Added montserrat font load offline

--- a/maps/penal-colony.html
+++ b/maps/penal-colony.html
@@ -53,6 +53,7 @@
     <span id="modal-img-close" class="modal-img-close close" data-dismiss="modal" role="button">&times;</span>
     <img class="modal-content modal-img-fs img-fluid" id="modal-img-fs" />
   </div>
+  <script type="module" src="../js/index.js"></script>
   <script type="module" src="../js/lang.js"></script>
   <script type="module" src="../js/maps/penal-colony.js"></script>
 </body>
