Uncapsulated styles and fonts

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </div>
     </div>
   </div>
+  <script type="module" src="./js/main.js"></script>
   <script type="module" src="./js/lang.js"></script>
   <script type="module" src="./js/index.js"></script>
 </body>
