--- a/maps/penal-colony.html
+++ b/maps/penal-colony.html
@@ -10,8 +10,8 @@
 <body>
   <div id="hud">
     <div id="tag-selector-div">
-      <button id="tag-selector-btn" class="tag-selector-btn btn rounded p-3">
-        <img class="logo" src="../data/icons/tags.svg" width="26" height="26" />
+      <button id="tag-selector-btn" class="tag-selector-btn btn rounded hud-btn">
+        <img class="logo" src="../data/icons/tags.svg" width="20" height="20" />
       </button>
       <div id="tag-selector" class="tag-selector rounded">
         <div id="tag-selector-content" class="row p-3">
@@ -31,15 +31,15 @@
       </div>
     </div>
     <div id="back-div">
-      <button id="back-btn" onclick="window.location.href='./../index.html'" class="back-btn btn rounded p-3">
-        <img class="logo" src="../data/icons/back.svg" width="26" height="26" />
+      <button id="back-btn" onclick="window.location.href='./../index.html'" class="back-btn btn rounded hud-btn">
+        <img class="logo" src="../data/icons/back.svg" width="20" height="20" />
       </button>
     </div>
     <div id="attributions-div" class="rounded">
-      <button id="attributions-btn" class="btn rounded p-3">
-        <img class="logo" src="../data/icons/info.svg" width="26" height="26" />
+      <button id="attributions-btn" class="btn rounded hud-btn">
+        <img class="logo" src="../data/icons/info.svg" width="20" height="20" />
       </button>
-      <div id="attributions-info" class="rounded p-3">
+      <div id="attributions-info" class="rounded hud-btn">
       </div>
     </div>
     <div id="map-logo">
