Optimized images and modified lang functionality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="description" content="Marauders maps">
+  <meta name="keywords" content="Marauders, map, maps">
+  <meta name="author" content="longopy">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Maprauders</title>
 </head>
 
@@ -12,7 +15,7 @@
     <div id="lang-div" class="dropdown lang-div rounded">
       <div class="btn-group dropdown-center dropend">
         <button class="btn lang-btn rounded" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-          <img src="./data/icons/language.svg" width="30" height="24" />
+          <img src="./data/icons/language.svg" width="30" height="24" alt="language icon"/>
         </button>
         <div class="dropdown-menu dropdown-menu-wide p-1">
           <button class="dropdown-item rounded" href="#" id="change-language-btn">
@@ -23,14 +26,14 @@
     </div>
     <div id="attributions-div" class="rounded">
       <button id="attributions-btn" class="btn rounded p-3">
-        <img class="icon-hover" src="./data/icons/info.svg" width="20" height="20" />
+        <img class="logo" src="./data/icons/info.svg" width="20" height="20" alt="information icon"/>
       </button>
-      <div id="attributions-info" class="rounded p-3">
+      <div id="attributions-info" class="rounded hud-btn">
       </div>
     </div>
   </div>
   <div class="header">
-    <img class=" mx-auto d-block" src="./data/logos/maprauders.svg" alt="MAPRAUDERS" height="72"></img>
+    <img class="mx-auto d-block img-fluid" src="./data/logos/maprauders.svg" height="72" width="432" alt="Maprauders logo"></img>
     <div class="p-5">
       <div class="container mt-5">
         <div id="menu-div" class="row">
